target point & image size was update
1. According to responsive design standard, we had fixed min-width and min-height for a tag. 
2. max-width was set for image, embed, video, object tag.

--- a/outline.css
+++ b/outline.css
@@ -80,6 +80,8 @@ a:focus,
 a:visited{
   color:  ;
  outline: none;
+ min-height: 48px;
+ min-width: 48px;
 }
 p{
   color:  ;
@@ -111,6 +113,8 @@ h6{
   font-family: ;
   font-size: ;
 }
+
+img,embed,object,video{ max-width: 100%; }
 
 .btn{
   color:  ;
