--- a/outline.css
+++ b/outline.css
@@ -70,6 +70,13 @@ table {
 :focus {
     outline: 0;
 }
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
 body{
     font-family: ;
     color: ;
